# secrets

./: .rustfmt.toml  .travis.yml  CHANGELOG.md  COPYRIGHT  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  rust.yml  rustfmt.toml
.github/workflows/: test.yml
example/decrypted_ciphertext/: ciphertext  key  nonce
example/master_key/: key
script/: update-docs
src/: boxed.rs  buf.rs  key.rs  lib.rs  marker.rs  refs.rs  sec.rs  secret.rs  secret_box.rs  secret_pointer.rs  secret_vec.rs  sodium.rs  traits.rs
src/ffi/: sodium.rs
src/traits/: bytes.rs  constant_eq.rs  randomizable.rs  uninitializable.rs  zeroable.rs
tests/: lib.rs
