[package]
name    = "secrets"
version = "1.0.0"
edition = "2018"

authors     = ["Stephen Touset <stephen@touset.org>"]
description = "Protected-access memory for cryptographic secrets"

license       = "MIT OR Apache-2.0"
homepage      = "https://github.com/stouset/secrets"
repository    = "https://github.com/stouset/secrets"
documentation = "https://stouset.github.io/secrets"
readme        = "README.md"

keywords = [ "crypto", "cryptography", "allocator" ]

[dependencies]
libc = '0'

[build-dependencies]
pkg-config = '0.3'

[dev-dependencies]
libsodium-sys = { version = '0.2', features = ['use-pkg-config'] }
