[package]
name    = "secrets"
version = "1.2.0"
edition = "2018"

authors     = ["Stephen Touset <stephen@touset.org>"]
description = "Protected-access memory for cryptographic secrets"

license       = "MIT OR Apache-2.0"
homepage      = "https://github.com/stouset/secrets"
repository    = "https://github.com/stouset/secrets"
documentation = "https://stouset.github.io/secrets"
readme        = "README.md"

keywords = [ "crypto", "cryptography", "allocator" ]

[dependencies]
libc          = '0.2'
libsodium-sys = { version = '0.2', optional = true }

[target.'cfg(target_family = "unix")'.build-dependencies]
pkg-config = '0.3'

[target.'cfg(target_family = "windows")'.build-dependencies]
vcpkg = '0.2'

[dev-dependencies]
libsodium-sys = '0.2'

[features]
allow-coredumps   = []
use-libsodium-sys = ["libsodium-sys"]
